ext {
    fingBugsVersion = "3.0.2"
    gsonVersion = "2.8.6"
    guavaVersion = "29.0-jre"
    commonsLangVersion = "3.11"
    httpClientVersion = "4.5.12"
    logbackVersion = "1.2.3"
    junitVersion = "5.7.0"
    mockitoVersion = "3.5.11"
}

allprojects { ->
    apply plugin: "java"
    apply plugin: "idea"

    sourceCompatibility = 1.11
    targetCompatibility = 1.11

    idea {
        module {
            downloadJavadoc = true
            downloadSources = true
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation "com.google.code.findbugs:jsr305:$fingBugsVersion"
        // https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
        compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'


        // Testing
        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
        testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
    }

    jar {
        archiveFileName = "${project.name}.jar"
    }

    test {
        useJUnitPlatform()
    }
}

clean {
    delete fileTree(dir: "${project.rootDir}/plugins", include: "*.jar").files
}